--- a/DSCC.MicroservicesAPI.7924/appsettings.json
+++ b/DSCC.MicroservicesAPI.7924/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "FlowerDb": "Server=mydatabase.casq2rj6vxt8.us-east-2.rds.amazonaws.com;Database=FlowerDb;UserId=admin;password=Nanajon#1"
+    "FlowerDb": "Data Source=mydatabase.casq2rj6vxt8.us-east-2.rds.amazonaws.com;Initial Catalog=cw_database;User Id=admin;password=Nanajon#1"
 
   }
 }
